--- a/login.html
+++ b/login.html
@@ -1,13 +1,52 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="assets/img/dausLogo.svg" type="image/svg+xml">
-    <title>Document</title>
+    <link rel="stylesheet" href="assets/bootstrap/bootstrap.min.css">
+    <link rel="stylesheet" href="assets/css/main.css">
+    <script src="assets/bootstrap/bootstrap.bundle.min.js"></script>
+    <script src="assets/bootstrap/jquery-3.5.1.min.js"></script>
+    <script src="assets/bootstrap/popper.min.js"></script>
+    <script src="https://kit.fontawesome.com/24202bad1a.js" crossorigin="anonymous"></script>
+    <title>2d6 | Login</title>
 </head>
-<body>
-    
+
+<body class="bg-2d6">
+    <main>
+        <!--Mostrar un card amb el formulari de login al centre de la pantalla-->
+        <div class="bg-2d6">
+            <div class="container">
+                <div class="row">
+                    <div class="col-sm-9 col-md-7 col-lg-5 mx-auto">
+                        <div class="card border-0 shadow rounded-3 my-5">
+                            <div class="card-body p-4 p-sm-5">
+                                <h3> Inicia sessió </h3>
+                                <form action="../Controller/login_controlador.php" method="POST" class="form-signin">
+                                    <div class="form-floating mb-3">
+                                        <input type="text" class="form-control" id="floatingInput" name="usuari"
+                                            placeholder="name@example.com" require>
+                                        <label for="floatingInput">Usuari</label>
+                                    </div>
+                                    <div class="form-floating mb-3">
+                                        <input type="password" class="form-control" id="floatingPassword"
+                                            name="password" placeholder="Password" require>
+                                        <label for="floatingPassword">Contrasenya</label>
+                                    </div>
+                                    <div class="d-grid">
+                                        <a class="btn btn-primary btn-login text-uppercase fw-bold" href="tallersinscrits.html">Iniciar sessió</a>
+                                    </div>
+                                </form>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </main>
 </body>
+
 </html>
