--- a/infotaller.html
+++ b/infotaller.html
@@ -63,7 +63,7 @@
                                 Tallers
                             </a>
                             <ul class="dropdown-menu">
-                                <li><a class="dropdown-item" href="#">Magic</a></li>
+                                <li><a class="dropdown-item" href="infotaller.html">Magic</a></li>
                             </ul>
                         </li>
                     </ul>
@@ -98,112 +98,63 @@
                 <span class="visually-hidden">Next</span>
             </button>
         </div>
-        <div class="container-fluid">
-            <div class="row align-items-center border-bottom border-warning">
-                <div class="col-9">
-                    <p>Articles</p>
-                </div>
-                <div class="col-1">
-                    <div>
-                        <p>Filtra Per:</p>
-                    </div>
-                </div>
-                <div class="col-2">
-                    <select class="d-flex form-select">
-                        <option selected>Seleccioni Filtre</option>
-                        <option value="1">Preu</option>
-                        <option value="2">Nom</option>
-                        <option value="3">Categoria</option>
-                    </select>
-                </div>
-                <br>
-            </div>
-            <div class="row bg-light">
-                <!--Columna per les categories dels articles-->
-                <div class="col-3">
-                    <div class="row">
-                        <!--Titol Categoria-->
-                        <div class="col-12 border border-dark">
-                            <h3>Categories</h3>
-                        </div>
-                        <!--Categories-->
-                        <div class="col-12 border">
-                            <!--Llista-->
-                            <ul class="list-group list-group-flush">
-                                <li class="list-group-item">Jocs de Rol</li>
-                                <li class="list-group-item">Jocs de Taula</li>
-                                <li class="list-group-item">Jocs de Cartes</li>
-                                <li class="list-group-item">Jocs de Societat</li>
-                            </ul>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-8">
-                    <!--Articles en card-->
-                    <div class="row">
-                        <div class="col-4">
-                            <div class="card" style="width: 18rem;">
-                                <img src="assets/img/uno.png" class="card-img-top" alt="...">
-                                <div class="card-body">
-                                    <h5 class="card-title"><a href="descarticle.html">Joc de Cartes</a></h5>
-                                    <a href="descarticle.html" class="card-text">Joc de Cartes</a>
-                                    <a href="cistella.html" class="btn btn-primari">Comprar</a>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-4">
-                            <div class="card" style="width: 18rem;">
-                                <img src="assets/img/uno.png" class="card-img-top" alt="...">
-                                <div class="card-body">
-                                    <h5 class="card-title"><a href="descarticle.html">Joc de Cartes</a></h5>
-                                    <a href="descarticle.html" class="card-text">Joc de Cartes</a>
-                                    <a href="cistella.html" class="btn btn-primari">Comprar</a>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-4">
-                            <div class="card" style="width: 18rem;">
-                                <img src="assets/img/uno.png" class="card-img-top" alt="...">
-                                <div class="card-body">
-                                    <h5 class="card-title"><a href="descarticle.html">Joc de Cartes</a></h5>
-                                    <a href="descarticle.html" class="card-text">Joc de Cartes</a>
-                                    <a href="cistella.html" class="btn btn-primari">Comprar</a>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-4">
-                            <div class="card" style="width: 18rem;">
-                                <img src="assets/img/uno.png" class="card-img-top" alt="...">
-                                <div class="card-body">
-                                    <h5 class="card-title"><a href="descarticle.html">Joc de Cartes</a></h5>
-                                    <a href="descarticle.html" class="card-text">Joc de Cartes</a>
-                                    <a href="cistella.html" class="btn btn-primari">Comprar</a>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-4">
-                            <div class="card" style="width: 18rem;">
-                                <img src="assets/img/uno.png" class="card-img-top" alt="...">
-                                <div class="card-body">
-                                    <h5 class="card-title"><a href="descarticle.html">Joc de Cartes</a></h5>
-                                    <a href="descarticle.html" class="card-text">Joc de Cartes</a>
-                                    <a href="cistella.html" class="btn btn-primari">Comprar</a>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-4">
-                            <div class="card" style="width: 18rem;">
-                                <img src="assets/img/uno.png" class="card-img-top" alt="...">
-                                <div class="card-body">
-                                    <h5 class="card-title"><a href="descarticle.html">Joc de Cartes</a></h5>
-                                    <a href="descarticle.html" class="card-text">Joc de Cartes</a>
-                                    <a href="cistella.html" class="btn btn-primari">Comprar</a>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
+        <div class="container-fluid bg-light">
+            <!--Mostrar detalls del taller-->
+            <div class="row">
+                <div class="col-12">
+                    <h1 class="text-center">Magic</h1>
                 </div>
             </div>
+            <div class="row">
+                <div class="col-12">
+                    <h2 class="text-center">Descripció</h2>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-12">
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec auctor, nisl
+                        vitae
+                        tincidunt
+                        lacinia, nunc
+                        nisl aliquam nunc, eget aliquam nisl nunc vel nunc. Nulla facilisi. Nulla facilisi. Nulla facilisi.
+                        Nulla
+                        facilisi.
+                        Nulla facilisi. Nulla facilisi. Nulla facilisi. Nulla facilisi. Nulla facilisi. Nulla facilisi. Nulla
+                        facilisi.
+                        Nulla facilisi. Nulla facilisi. Nulla facilisi. Nulla facilisi. Nulla facilisi. Nulla facilisi. Nulla
+                        facilisi.
+                        Nulla facilisi. Nulla facilisi. Nulla facilisi. Nulla facilisi. Nulla facilisi. Nulla facilisi. Nulla
+                        facilisi.
+                        Nulla facilisi. Nulla facilisi. Nulla facilisi. Nulla facilisi. Nulla facilisi. Nulla facilisi. Nulla
+                        facilisi.
+                        Nulla facilisi. Nulla facilisi. Nulla facilisi. Nulla facilisi. Nulla facilisi. Nulla facilisi. Nulla
+                        facilisi.
+                        Nulla facilisi. Nulla facilisi. Nulla facilisi. Nulla facilisi. Nulla facilisi. Nulla facilisi. Nulla
+                        facilisi.
+                        Nulla facilisi. Nulla facilisi. Nulla facilisi. Nulla facilisi. Nulla facilisi. Nulla facilisi. Nulla
+                        facilisi.
+                        Nulla facilisi. Nulla facilisi. Nulla facilisi. Nulla facilisi. Nulla facilisi. Nulla facilisi. Nulla
+                        facilisi.
+                        Nulla facilisi. Nulla facilisi. Nulla facilisi. Nulla facilisi. Nulla facilisi. Nulla facilisi. Nulla
+                        facilisi.
+                        Nulla facilisi. Nulla facilisi. Nulla facilisi. Nulla facilisi. Nulla facilisi. Nulla facilisi. Nulla
+                        facilisi.
+                    </p>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-12">
+                    <h2 class="text-center">Horari</h2>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-12">
+                    <p class="text-center">De 10:00 a 12:00</p>
+                </div>
+            </div>
+            <a href="inscriutaller.html" class="btn btn-primari">Inscriure's</a>
+                       
+        </div>
             <footer class="row">
                 <br>
                 <!--Imatge logo Alineat al centre-->
