--- a/blog.html
+++ b/blog.html
@@ -63,7 +63,7 @@
                                 Tallers
                             </a>
                             <ul class="dropdown-menu">
-                                <li><a class="dropdown-item" href="#">Magic</a></li>
+                                <li><a class="dropdown-item" href="infotaller.html">Magic</a></li>
                             </ul>
                         </li>
                     </ul>
