--- a/compra2.html
+++ b/compra2.html
@@ -62,7 +62,7 @@
                                 Tallers
                             </a>
                             <ul class="dropdown-menu">
-                                <li><a class="dropdown-item" href="#">Magic</a></li>
+                                <li><a class="dropdown-item" href="infotaller.html">Magic</a></li>
                             </ul>
                         </li>
                     </ul>
